deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-ip-app
  namespace: master-ip
  labels:
    app: master-ip
spec:
  selector:
    app: master-ip
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
