deploy/k8s/service-cloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-ip-cloud
spec:
  selector:
    app: master-ip-cloud
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
