deploy/k8s/service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-ip-local
spec:
  selector:
    app: master-ip-local
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
